--- a/animation.css
+++ b/animation.css
@@ -118,3 +118,114 @@ div {
         transform: rotate(-360deg);
     }
 }
+  .box
+  {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      
+  }
+
+  @font-face
+  {
+    font-family: hey;
+    src: url("SparTakus.ttf");
+  }
+  .glitch {
+    font-size: 10vw;
+    line-height: 1;
+    font-family: hey;
+    font-weight: 700;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 5px;
+  }
+  .glitch:before, .glitch:after {
+    display: block;
+    content: 'APOGEE';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: .8;
+  }
+  .glitch:after {
+    color: #f0f;
+    z-index: -2;
+    animation: glitch-left-2 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
+  }
+  .glitch:before {
+    color: #0ff;
+    z-index: -1;
+    animation: glitch-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+  }
+  
+  @keyframes glitch-small {
+    0% {
+      transform: translate(0);
+    }
+    33% {
+      transform: translate(2px, 1px);
+    }
+    66% {
+      transform: translate(-1px, -1px);
+    }
+    to {
+      transform: translate(0);
+    }
+  }
+  @keyframes glitch-medium {
+    0% {
+      transform: translate(0);
+    }
+    20% {
+      transform: translate(-2px, 2px);
+    }
+    40% {
+      transform: translate(-2px, -2px);
+    }
+    60% {
+      transform: translate(2px, 2px);
+    }
+    80% {
+      transform: translate(2px, -2px);
+    }
+    to {
+      transform: translate(0);
+    }
+  }
+  @keyframes glitch-left {
+    0% {
+      transform: translate(0);
+    }
+    33% {
+      transform: translate(-5px, 3px);
+    }
+    66% {
+      transform: translate(5px, -3px);
+    }
+    to {
+      transform: translate(0);
+    }
+  }
+  @keyframes glitch-left-2 {
+    0% {
+      transform: translate(0);
+    }
+    33% {
+      transform: translate(-5px, -3px);
+    }
+    66% {
+      transform: translate(5px, 2px);
+    }
+    to {
+      transform: translate(0);
+    }
+  }
+
