--- a/animation.css
+++ b/animation.css
@@ -17,8 +17,8 @@ div {
 }
 
 .layer-1 {
-    width: 90vw;
-    height: 90vh;
+    width: 91vw;
+    height: 91vh;
     opacity: 0;
     animation: fade_anim 2s linear infinite;
     /* animation: layer-10 4s linear infinite; */
@@ -26,26 +26,42 @@ div {
 }
 
 .layer-2 {
-    width: 83vw;
-    height: 83vh;
+    width: 84vw;
+    height: 84vh;
     opacity: 0;
-    animation: fade_anim 2s linear infinite 0.25s;
+    animation: fade_anim 2s linear infinite 0.2s;
 
 }
 
 .layer-3 {
-    width: 76vw;
-    height: 76vh;
+    width: 77vw;
+    height: 77vh;
     opacity: 0;
-    animation: fade_anim 2s linear infinite 0.5s;
+    animation: fade_anim 2s linear infinite 0.36s;
 
 }
 
 .layer-4 {
-    width: 69vw;
-    height: 69vh;
+    width: 70vw;
+    height: 70vh;
     opacity: 0;
-    animation: fade_anim 2s linear infinite 0.75s;
+    animation: fade_anim 2s linear infinite 0.52s;
+
+}
+
+.layer-a {
+  width: 63vw;
+  height: 63vh;
+  opacity: 0;
+  animation: fade_anim 2s linear infinite 0.68s;
+
+}
+
+.layer-b {
+  width: 56vw;
+  height: 56vh;
+  opacity: 0;
+  animation: fade_anim 2s linear infinite 0.84s;
 
 }
 
@@ -157,6 +173,7 @@ div {
   }
   .glitch:after {
     color: #f0f;
+    text-shadow: 2px 2px black;
     z-index: -2;
     animation: glitch-left-2 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
   }
@@ -227,5 +244,31 @@ div {
     to {
       transform: translate(0);
     }
+  }
+
+  @font-face
+  {
+    font-family: hey2;
+    src: url("pdark.ttf");
+  }
+
+  .sidetext
+  {
+   font-family: hey2;
+   color:lightgray;
+   position: absolute;
+   top: 50vh;
+   left: 55vw;
+   font-size: 2vw;
+   letter-spacing: 2px;
+  }
+
+  #particles-js
+  {
+    
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
 
