--- a/animation.css
+++ b/animation.css
@@ -259,7 +259,7 @@ div {
    text-shadow: 3px 3px black;
    position: absolute;
    top: 48vh;
-   height: 100%;
+   width: 100%;
    text-align: center;
    font-size: 3.5vw;
    letter-spacing: 2px;
